# dreamlounge_be

./: Procfile  README.md  alembic.ini  claude.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_init.py  0002_add_activity_images.py
src/: main.py
src/core/: config.py  dependencies.py  security.py
src/db/: base.py  session.py
src/models/: __init__.py  application.py  club.py  club_member.py  notification.py  post.py  user.py
src/routers/v1/: applications.py  auth.py  clubs.py  members.py  notifications.py  posts.py  router.py
src/schemas/: application.py  club.py  member.py  notification.py  post.py  user.py
src/services/: application_service.py  auth_service.py  club_service.py  member_service.py  notification_service.py  post_service.py
src/utils/: email.py  pagination.py  storage.py  supabase_client.py
tests/: conftest.py  test_admin.py  test_applications.py  test_auth.py  test_clubs.py  test_image_upload.py
