[project]
name = "dream-lounge-be"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "bcrypt==4.0.1",
    "fastapi[all]>=0.128.0",
    "passlib>=1.7.4",
    "psycopg[binary]>=3.1.0",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.45",
    "sqlalchemy-utils>=0.41.0",
    "supabase>=2.28.3",
    "uvicorn>=0.40.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "resend>=0.10.0",
    "alembic>=1.13.0",
    "email-validator>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
